[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/Tile.gd" type="Script" id=1]
[ext_resource path="res://prefabs/PieceNestMesh.tres" type="PlaneMesh" id=2]

[sub_resource type="SpatialMaterial" id=1]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 0, 1, 0, 1 )
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 0.627451, 0.627451, 0.627451, 0.501961 )
depth_enabled = true
depth_scale = 0.05
depth_deep_parallax = false
depth_flip_tangent = false
depth_flip_binormal = false

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 1, 0.607843, 0, 1 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 1, 0.607843, 0, 1 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 0, 1, 0, 1 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 0.501961, 0.501961, 0.501961, 0.501961 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
params_depth_draw_mode = 1
albedo_color = Color( 1, 0, 0, 1 )

[sub_resource type="BoxShape" id=9]
extents = Vector3( 1, 0.1, 1 )

[node name="PieceNest" type="Area"]
input_ray_pickable = true
monitoring = false
monitorable = false
script = ExtResource( 1 )

[node name="Meshes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )

[node name="MoveAllyMesh" type="MeshInstance" parent="Meshes"]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 1 )

[node name="LastMoveMesh" type="MeshInstance" parent="Meshes"]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 2 )

[node name="MoveEnemyMesh" type="MeshInstance" parent="Meshes"]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 3 )

[node name="ProtectEnemyMesh" type="MeshInstance" parent="Meshes"]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 4 )

[node name="ProtectAllyMesh" type="MeshInstance" parent="Meshes"]
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 5 )

[node name="SelectAllyMesh" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 6 )

[node name="SelectNeutralMesh" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 7 )

[node name="SelectEnemyMesh" type="MeshInstance" parent="Meshes"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.001, 0 )
visible = false
mesh = ExtResource( 2 )
material/0 = SubResource( 8 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 9 )

[connection signal="mouse_entered" from="." to="." method="_on_PieceNest_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_PieceNest_mouse_exited"]
